Fix spacing

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body, html {
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
-  height: 100vh;
+  height: 95vh;
 }
 
 .first {
@@ -74,16 +74,14 @@ p {
 
 .parallax__layer--two {
   transform: translateZ(-1px) scale(2);
-  /*margin-top: 0px;*/
+  margin-top: 35px;
   width: 500px;
   margin-left: 200px;
 }
 
 .parallax__layer--three {
   transform: translateZ(-2px) scale(2);
-  /*margin-top: 400px;
-  margin-left: 600px;*/
-  margin: 400px auto 0px;
+  margin: 360px auto 0px;
   font-size: 30px;
   width: 700px;
 }
